<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_back"
    tools:context=".Perfil">

    <Button
        android:id="@+id/editar_dados_pessoais_bt"
        android:layout_width="315dp"
        android:layout_height="62dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/yellow_accents"
        android:text="@string/editar_dados_perfil"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salvar_dados_pessoais_bt" />

    <ImageView
        android:id="@+id/seta_image_perfil"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/seta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/text_perfil"
        android:layout_width="235dp"
        android:layout_height="94dp"
        android:layout_marginTop="16dp"
        android:text="@string/text_perfil"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caixa_nome"
        style="@style/Edit_Text"
        android:layout_marginTop="32dp"
        android:background="@drawable/edit_text"
        android:hint="@string/nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_perfil" />

    <EditText
        android:id="@+id/peso"
        style="@style/Edit_Text"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text"
        android:hint="@string/peso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/idade" />

    <EditText
        android:id="@+id/altura"
        style="@style/Edit_Text"
        android:layout_width="331dp"
        android:layout_height="63dp"
        android:background="@drawable/edit_text"
        android:hint="@string/altura"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/peso"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/objetivo"
        style="@style/Edit_Text"
        android:layout_width="331dp"
        android:layout_height="63dp"
        android:background="@drawable/edit_text"
        android:hint="@string/objetivo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/altura"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/idade"
        style="@style/Edit_Text"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text"
        android:hint="@string/idade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.387"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caixa_nome" />

    <Button
        android:id="@+id/salvar_dados_pessoais_bt"
        android:layout_width="315dp"
        android:layout_height="62dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/orange_button"
        android:text="@string/salvar_dados_usuario"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/objetivo"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

