<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_back"
    tools:context=".activities.AdicionarTreino">

    <ImageView
        android:id="@+id/seta_voltar_adicionar_treino"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/seta"
        android:contentDescription="@string/descricao_voltar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>


    <ImageView
        android:id="@+id/person_image_adicionar_treino"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:importantForAccessibility="no"
        android:src="@drawable/person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/text_adicionar_treino"
        android:layout_width="235dp"
        android:layout_height="94dp"
        android:layout_marginTop="16dp"
        android:text="@string/bt_adicionar"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/caixa_nome_treino"
        style="@style/Edit_Text"
        android:layout_marginTop="28dp"
        android:background="@drawable/edit_text"
        android:hint="@string/nome_do_treino"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caixa_nome_exercicio"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/text_tipo_treino"
        style="@style/Edit_Text"
        android:layout_marginTop="144dp"
        android:background="@drawable/edit_text"
        android:importantForAutofill="no"
        android:text="@string/tipo_de_treino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/caixa_nome_exercicio"
        style="@style/Edit_Text"
        android:background="@drawable/edit_text"
        android:hint="@string/nome_do_exercicio"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_tipo_treino"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/caixa_num_serie"
        style="@style/Edit_Text"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text"
        android:hint="@string/num_de_series"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caixa_nome_treino"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/caixa_num_repeticoes"
        style="@style/Edit_Text"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text"
        android:hint="@string/num_de_repeticoes"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caixa_num_serie"
        tools:ignore="TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/salvar_bt"
        style="@style/Button_Estilo"
        android:layout_width="322dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@color/orange_main"
        android:text="@string/bt_salvar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/caixa_num_repeticoes" />


</androidx.constraintlayout.widget.ConstraintLayout>