<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_back"
    tools:context=".EditarExercicio">

    <ImageView
        android:id="@+id/seta_voltar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/seta"
        android:contentDescription="@string/descricao_voltar"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/person_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/person"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_editar_exercicio"
        android:layout_width="235dp"
        android:layout_height="94dp"
        android:layout_marginTop="16dp"
        android:text="@string/editar_exercicio"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_nome_exercicio"
        style="@style/Edit_Text"
        android:layout_marginTop="44dp"
        android:background="@drawable/edit_text"
        android:hint="@string/edit_nome_do_exercicio"
        app:layout_constraintTop_toBottomOf="@id/text_editar_exercicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_series"
        style="@style/Edit_Text"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text"
        android:hint="@string/edit_num_de_series"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/edit_nome_exercicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_repeticoes"
        style="@style/Edit_Text"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text"
        android:hint="@string/edit_num_de_repeticoes"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/edit_series"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_salvar"
        style="@style/Button_Estilo"
        android:layout_width="322dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:background="@color/orange_main"
        android:text="@string/salvar"
        app:layout_constraintTop_toBottomOf="@id/edit_repeticoes"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancelar"
        style="@style/Button_Estilo"
        android:layout_width="322dp"
        android:layout_height="51dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/white"
        android:text="@string/cancelar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_salvar"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
