<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MeuPerfil">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/treinoA"
        style="@style/Button_Estilo_2"
        android:layout_width="107dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:background="@color/yellow_accents"
        android:text="@string/bt_treno_A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/treinoB"
        style="@style/Button_Estilo_2"
        android:layout_width="107dp"
        android:layout_height="53dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="100dp"
        android:background="@color/yellow_accents"
        android:text="@string/bt_treno_b"
        app:layout_constraintStart_toEndOf="@id/treinoA"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/treinoC"
        style="@style/Button_Estilo_2"
        android:layout_width="107dp"
        android:layout_height="53dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="100dp"
        android:background="@color/yellow_accents"
        android:text="@string/bt_treino_c"
        app:layout_constraintStart_toEndOf="@id/treinoB"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/excluir"
        style="@style/Button_Estilo_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#D9D9D9"
        android:text="@string/bt_excluir"
        app:layout_constraintEnd_toStartOf="@id/editar_bt"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_texto" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/editar_bt"
        style="@style/Button_Estilo_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#D9D9D9"
        android:text="@string/bt_editar"
        app:layout_constraintTop_toBottomOf="@id/container_texto"
        app:layout_constraintStart_toEndOf="@id/excluir"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/concluit_bt"
        style="@style/Button_Estilo"
        android:layout_width="322dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:text="@string/bt_concluir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/excluir" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/adicionar_bt"
        style="@style/Button_Estilo"
        android:layout_width="322dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:background="@color/orange_main"
        android:text="@string/bt_adicionar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.377"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/concluit_bt" />

    <ImageView
        android:id="@+id/seta_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/seta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>

    <ImageView
        android:id="@+id/person_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/container_texto"
        style="@style/CardView_Estilo"
        app:layout_constraintTop_toBottomOf="@id/treinoB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/caixa_de_texto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Digite seu texto aqui..."
            android:gravity="top|start"
            android:background="@android:color/transparent"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:enabled="false"
            android:padding="16dp" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_meu_treino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
